@@ -1,3 +1,8 @@
+2013-02-XX   1.3.6:
+-------------------
+  * fixed conda pip NAME==VERSION
+
+
 2013-02-05   1.3.5:
 -------------------
   * fixed detecting untracked files on Windows
